test: check SIMD sparse allocations outside Kover